# tms

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  mongo_main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4aeae6e450c2_added_column_hashed_password_for_user.py  (+1 more)
auth-service/: .env.example  alembic.ini  pyproject.toml  pytest.ini  redis_main.py
auth-service/alembic/: env.py
auth-service/alembic/versions/: 28d9e48aad7b_create_user_table.py
auth-service/src/: config.py  main.py
auth-service/src/api/: __init__.py
auth-service/src/api/v1/routers/: user.py
auth-service/src/api/v1/services/: user.py
auth-service/src/database/: db.py  redis_db.py
auth-service/src/messaging/: connection.py  consumers.py  producers.py  queues_names.py
auth-service/src/models/: base.py  user.py
auth-service/src/repositories/: __init__.py  redis_repository.py
auth-service/src/schemas/: messaging.py  response.py  user.py
auth-service/src/utils/: auth_jwt.py  constants.py  service.py  unit_of_work.py
auth-service/tests/: conftest.py  constants.py
auth-service/tests/fixtures/: __init__.py
auth-service/tests/fixtures/db_mocks/: tasks.py
auth-service/tests/fixtures/testing_cases/: __init__.py
auth-service/tests/unit/: conftest.py
auth-service/tests/unit/api/v1/services/: test_user_service.py
email-service/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml
src/: config.py  database.py  main.py  models.py
task-service/: .env.example  Dockerfile  mongo_main.py  pyproject.toml
tests/: conftest.py  utils.py
(+74 files in other folders)
